# bpmn-domain-modeling-on-rust

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  README.md
src/: lib.rs
src/core/: definitions.rs
src/types/: mod.rs  non_empty.rs
